# study-bot

./: bot.py  pyproject.toml
