[tool.poetry]
name = "study-bot"
version = "0.1.0"
description = ""
authors = ["Lefun21 <haziev_01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
isort = "^5.12.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
